<resources>
    <string name="app_name">PaySave</string>
    <string name="title_activity_login">PaySave</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="prompt_confirm_password">CONFIRM PASSWORD</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_register">REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome,</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_link">Create an Account</string>
    <string name="hint_username">USERNAME</string>
    <string name="logout">Logout</string>
    <string name="transfer">Transfer</string>
    <string name="buy_load">Buy Load</string>
    <string name="e_load">E-Load</string>
    <string name="peso">₱</string>
    <string name="ph_code">+63</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">PHONE NUMBER</string>
    <string name="send_to">Recipient</string>
    <string name="buy_load_for">Buy load for</string>
    <string name="receiver_hint">Enter name or number</string>
    <string name="phone_hint">XXX XXX XXXX</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">0.00</string>
    <string name="available_balance">Available Balance: </string>
    <string name="next">Next</string>
    <string name="pay">Continue</string>
    <string name="email_hint">Please enter a valid email address.</string>
    <string name="password_hint">Your password should be at least 8 characters long.</string>
    <string name="transactions">Transactions</string>
    <string name="cashIn">Cash in</string>
    <string name="transactions_title">Transaction History</string>
    <string name="receiver_label">Receiver</string>
    <string name="sender_label">Sender</string>
    <string name="money">Money</string>
    <string name="cash_in_title">Cash In</string>
    <string name="over_the_counter">Continue</string>
    <string name="amount_prompt">Enter amount</string>
    <string name="deposit">Deposit</string>
    <string name="deposittitle">Deposit Amount</string>
    <string name="register">REGISTER</string>
    <string name="paybills">Pay Bills</string>
</resources>